--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Mon api avec node js",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/DevSuccess/API-NodeJS/issues"
   },
-  "homepage": "https://github.com/DevSuccess/API-NodeJS#readme"
+  "homepage": "https://github.com/DevSuccess/API-NodeJS#readme",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
