--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "mariadb": "^3.1.2",
+    "mysql": "^2.18.1",
     "sequelize": "^6.31.1",
     "serve-favicon": "^2.5.0"
   },
